UI redesign to notes first, v2

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -416,7 +416,7 @@
     "recording": "Recording",
     "endNote": "End Note"
   },
-  "settings": {
+  "sessions": {
     "title": "Notes",
     "newNote": "New Note",
     "endNote": "Close Note",
