--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -436,6 +436,7 @@
     "transcriptTab": "Transcript",
     "startRecording": "Start Recording",
     "stopRecording": "Stop Recording",
+    "resumeRecording": "Resume",
     "recording": "Recording",
     "summaryTab": "Summary",
     "summaryLoading": "Generating summary...",
