--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -412,6 +412,7 @@
     }
   },
   "notes": {
+    "searchPlaceholder": "Search",
     "emptyState": "Select a note or create a new one",
     "recording": "Recording",
     "endNote": "End Note"
