me vs them transcripts

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -431,6 +431,8 @@
     "deleteConfirm": "Are you sure you want to delete this note?",
     "mic": "You",
     "speaker": "Others",
+    "sourceMe": "Me",
+    "sourceThem": "Them",
     "notes": "Notes",
     "notesPlaceholder": "Type your notes here...",
     "notesTab": "Notes",
